--- a/modules/home-manager/polybar/config
+++ b/modules/home-manager/polybar/config
@@ -21,8 +21,8 @@ foreground = ${colors.foreground}
 line-size = 3
 line-color = ${colors.secondary}
 
-;font-0 = Hack Nerd Font:pixelsize=11:antialias=true;2.5
-font-0 = SFMono Nerd Font:pixelsize=11:antialias=true;2.5
+font-0 = Hack Nerd Font:pixelsize=11:antialias=true;2.5
+;font-0 = SFMono Nerd Font:pixelsize=11:antialias=true;2.5
 ;font-0 = Monaspace Argon:pixelsize=14:antialias=true;2.5
 font-1 = Hack Nerd Font:style=Regular:pixelsize=14:antialias=true;3
 
@@ -212,7 +212,7 @@ label-connected = " %ifname%"
 
 [module/dock]
 type = internal/network
-interface = enx644bf0021503
+interface = enp0s3
 
 interval = 3.0
 label-padding = 1
