--- a/modules/home-manager/polybar/config
+++ b/modules/home-manager/polybar/config
@@ -21,10 +21,10 @@ foreground = ${colors.foreground}
 line-size = 3
 line-color = ${colors.secondary}
 
-font-0 = Hack Nerd Font:pixelsize=11:antialias=true;2.5
+font-0 = FiraCode Nerd Font:pixelsize=11:antialias=true;2.5
 ;font-0 = SFMono Nerd Font:pixelsize=11:antialias=true;2.5
 ;font-0 = Monaspace Argon:pixelsize=14:antialias=true;2.5
-font-1 = Hack Nerd Font:style=Regular:pixelsize=14:antialias=true;3
+font-1 = FiraCode Nerd Font:style=Regular:pixelsize=14:antialias=true;3
 
 ;monitor = DP-3-1
 modules-left = workspaces
