Update polybar icon cal

--- a/modules/home-manager/polybar/config
+++ b/modules/home-manager/polybar/config
@@ -167,7 +167,7 @@ time-alt = %H:%M
 
 format-prefix-foreground = ${colors.foreground}
 format-underline = ${colors.primary}
-format-prefix = 
+format-prefix = 󰃰
 
 label = %date% %time%
 label-alt = %time%
